--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -349,14 +349,14 @@ The Olympia Upgrade introduces no new consensus-critical vulnerabilities beyond 
 
 The Olympia Upgrade applies well-established EVM upgrades and adds a consensus-level redirect of `BASEFEE` to a transparent, auditable treasury. It preserves all EVM guarantees, introduces no new opcodes or runtime changes, and maintains strict isolation between protocol consensus and governance execution. With comprehensive testnet validation and multi-client alignment, the upgrade strengthens Ethereum Classic’s security while enabling sustainable development funding.
 
-## Copyright
+### Copyright
 
 Copyright and related rights waived via  
 [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
 
-## Appendix: EVM Compatibility Roadmap and Upgrade Candidates
+### Appendix: EVM Compatibility Roadmap and Upgrade Candidates
 
-### Future Considerations: Toward Full EVM Compatibility
+#### Future Considerations: Toward Full EVM Compatibility
 
 The Olympia Upgrade is intentionally limited in scope to EIP-1559 and EIP-3198. However, additional Ethereum protocol improvements have been reviewed as potential candidates for future adoption. The table below categorizes relevant EIPs based on their compatibility with Ethereum Classic’s Proof-of-Work model, utility to developers, and alignment with ETC’s principles of immutability, simplicity, and sovereignty.
 
@@ -366,7 +366,7 @@ This roadmap serves as a reference for ongoing community discussion and future u
 
 ---
 
-### ✅ Candidates for Future Inclusion
+#### ✅ Candidates for Future Inclusion
 
 The following EIPs are technically and philosophically aligned with ETC and may improve performance, developer experience, or compatibility without compromising Proof-of-Work security.
 
@@ -381,7 +381,7 @@ The following EIPs are technically and philosophically aligned with ETC and may 
 
 ---
 
-### ⚠️ Optional or Low Priority
+#### ⚠️ Optional or Low Priority
 
 These EIPs offer marginal or situational benefits and do not require urgent action.
 
@@ -394,7 +394,7 @@ These EIPs offer marginal or situational benefits and do not require urgent acti
 
 ---
 
-### ❌ Incompatible or Out of Scope (PoS-Specific)
+#### ❌ Incompatible or Out of Scope (PoS-Specific)
 
 These EIPs are tightly coupled to Ethereum’s Proof-of-Stake architecture or require changes incompatible with ETC’s protocol values.
 
