--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -13,213 +13,313 @@ license: CC0-1.0
 
 ### Simple Summary
 
-Redirect the `BASEFEE` introduced by ECIP-1111 (EIP-1559) into a protocol-defined on-chain treasury contract — the Olympia Treasury — instead of burning it. This enables sustainable, transparent, and decentralized funding for Ethereum Classic’s development, infrastructure, and security, without introducing inflation or trusted intermediaries.
+This proposal redirects the `BASEFEE` introduced by ECIP-1111 (via EIP-1559) from being burned to being deposited into an on-chain, protocol-defined treasury contract known as the **Olympia Treasury**. This mechanism establishes a sustainable and non-inflationary funding stream for Ethereum Classic by capturing fee revenue at the consensus layer. The treasury operates without trusted intermediaries and is designed to transparently fund long-term protocol development, client maintenance, infrastructure, and ecosystem security.
 
 ### Abstract
 
-This ECIP specifies the creation and integration of the Olympia Treasury, a protocol-level smart contract deployed at a fixed address on Ethereum Classic. Upon activation of the Olympia Upgrade (ECIP-1111), all `BASEFEE` revenue from EIP-1559 transactions will be redirected to this treasury contract instead of being burned. The treasury will serve as a decentralized and transparent funding mechanism to support Ethereum Classic’s long-term infrastructure, ecosystem growth, and client development. The contract will be immutable, externally auditable, and interoperable with a permissionless governance system (Olympia DAO) responsible for disbursing funds via on-chain proposals. The design follows emerging standards used by networks such as Ronin, Celo, and Mantle, which also redirect basefee revenue to protocol-owned treasuries.
+This ECIP defines the deployment and integration of the **Olympia Treasury**, a protocol-level smart contract at a fixed address on the Ethereum Classic network. Following the activation of ECIP-1111 (which introduces EIP-1559), all `BASEFEE` revenue will be redirected to this treasury contract instead of being burned.
 
+The Olympia Treasury acts as a decentralized, immutable funding vault that accumulates protocol-level fee revenue. It is externally auditable, non-upgradable, and designed for secure interoperability with a permissionless governance layer (defined in ECIP-1113). Fund disbursement is executed via on-chain proposals submitted through Olympia DAO.
+
+This model provides Ethereum Classic with a transparent, sustainable funding mechanism to support core client development, infrastructure, ecosystem tooling, and long-term security—without introducing inflation or relying on centralized intermediaries. The design aligns with established precedents from other EVM-compatible networks such as Ronin, Celo, and Mantle, which similarly redirect basefee revenue into protocol-owned treasuries.
 
 ### Motivation
 
-Ethereum Classic has historically lacked a sustainable, transparent, and decentralized method to fund protocol development, infrastructure, tooling, or community growth. Funding has been dependent on short-lived grants, centralized donors, or nonprofit foundations — many of which have shut down or withdrawn support.
+Ethereum Classic currently lacks a sustainable and decentralized mechanism to fund core protocol development, infrastructure, tooling, and ecosystem growth. Historical funding has relied on short-term grants, centralized donors, or nonprofit foundations — many of which have ceased operations or withdrawn support.
 
-With ECIP-1017 reducing block rewards over time, Ethereum Classic must establish a new funding model that does not rely on inflation or centralized discretion. Redirecting the `BASEFEE` from EIP-1559 to the Olympia Treasury enables Ethereum Classic to capture value from network usage and reinvest it into the ecosystem. This aligns incentives between miners, users, and developers, strengthens the long-term security budget, and ensures a credible, on-chain funding pathway for public goods — without compromising immutability or Proof-of-Work.
+Under ECIP-1017, block rewards are programmed to decline over time. As inflationary funding mechanisms taper off, Ethereum Classic must adopt a new model that is both durable and aligned with its core principles of immutability and Proof-of-Work.
+
+Redirecting the `BASEFEE` introduced by EIP-1559 into the Olympia Treasury establishes a transparent, protocol-native source of funding derived from network usage. This approach:
+
+- Aligns incentives between miners, users, and developers.
+- Reinforces the long-term security and maintenance budget.
+- Creates a sustainable public goods funding pathway without introducing inflation or centralization risks.
+
+By capturing endogenous protocol revenue and directing it into a decentralized treasury, Ethereum Classic gains the financial tooling necessary to support long-term viability and ecosystem resilience.
 
 ### Specification
 
 #### Contract Address
 
-The Olympia Treasury contract SHALL be deployed at a fixed, deterministic address. This address is hardcoded into Ethereum Classic’s consensus rules as the recipient of the `BASEFEE` defined in ECIP-1111.
+The Olympia Treasury contract SHALL be deployed at a fixed, deterministic address. This address SHALL be hardcoded into Ethereum Classic's consensus rules as the recipient of the `BASEFEE` defined in ECIP-1111.
 
-- **Address (placeholder)**: `0x0000000000000000000000000000000000OLYMPIA`  
-  _(final address will be published prior to testnet deployment and agreed by client implementers)_
+- **Placeholder Address**: `0x0000000000000000000000000000000000OLYMPIA`  
+  _(Final address to be derived via `CREATE` or `CREATE2` and published prior to testnet deployment in coordination with client implementers.)_
 
-The final address will be derived using the `CREATE` or `CREATE2` opcode during network upgrade coordination and MUST be reproducible by all client implementations.
+The address derivation MUST be reproducible across all client implementations to ensure deterministic deployment and cross-client consensus.
 
 #### Funding Source
 
-- 100% of the `BASEFEE` collected under EIP-1559 SHALL be transferred to the Olympia Treasury contract.
-- This transfer SHALL occur at the protocol level and be enforced by client consensus rules beginning at the activation block of the Olympia Upgrade (ECIP-1111).
+- **Fee Redirection**: 100% of the `BASEFEE` collected from EIP-1559 transactions SHALL be redirected to the Olympia Treasury contract.
+- **Consensus Enforcement**: This redirection SHALL be enforced at the consensus layer starting from the activation block of ECIP-1111.
 
 #### Contract Properties
 
-The Olympia Treasury contract MUST meet the following conditions:
+The Olympia Treasury contract MUST satisfy the following technical constraints:
 
-- Be deployed immutably with no proxy patterns, upgrade hooks, or owner-controlled logic.
-- Include no `selfdestruct` or `delegatecall` mechanisms.
-- Emit standard `Transfer`, `Receive`, and `ProposalExecuted` logs for traceability.
-- Allow public balance and transfer history inspection through standard view methods.
-- Reject all externally owned account (EOA) withdrawals unless authorized through governance execution.
+- Immutable deployment: No proxy patterns, upgrade hooks, or owner-controlled logic.
+- No `selfdestruct` or `delegatecall` functionality.
+- Standard logging: MUST emit `Transfer`, `Receive`, and `ProposalExecuted` events for full traceability.
+- Full read transparency: Publicly accessible `view` methods for balance and transaction history.
+- Withdrawal restrictions: EOAs MUST be prevented from directly initiating withdrawals.
 
 #### Governance Interface
 
-The Olympia Treasury SHALL expose a governance interface callable by a designated DAO contract (see ECIP-1113). This interface MUST:
+The Treasury SHALL expose an interface callable exclusively by a designated governance contract (see ECIP-1113). This interface MUST support:
 
-- Allow for permissionless proposal intake via governance contracts.
-- Schedule approved disbursements via `release()` or `execute()` functions.
-- Support multi-step workflows such as milestone-based vesting or time-locked execution.
-- Log all governance actions transparently on-chain.
+- **Permissionless proposal intake** via governance-layer logic.
+- **Authorized disbursement execution** via `release()` or `execute()` methods.
+- **Flexible workflows**, such as milestone-based funding or time-locked transfers.
+- **On-chain auditability** through event logging of all governance-initiated actions.
 
-The Treasury contract MUST NOT include embedded governance logic. Instead, it SHALL serve as a funding vault governed externally by Olympia DAO through composable smart contract interactions.
+> Governance logic SHALL reside entirely outside the Treasury contract to maintain modularity and minimize attack surface.
 
-#### Protection Against Unauthorized Access and Spam
+#### Execution Control and Anti-Spam Protections
 
-The Olympia Treasury contract is hardened against unauthorized disbursement attempts:
+The Treasury contract MUST enforce strict access controls to mitigate unauthorized usage:
 
-- **DAO-Only Execution**:  
-  Only the authorized DAO executor contract MAY trigger `release()` or `execute()` functions. Calls from EOAs or unauthorized contracts are rejected.
+- **DAO-Only Execution**: Only the authorized DAO executor MAY invoke fund release functions. Unauthorized calls MUST revert.
+- **Governance-Free Core**: The Treasury SHALL contain no embedded proposal or voting logic.
+- **External Rate Limiting**: Proposal throughput MUST be rate-limited at the governance layer, reducing spam and denial-of-service risk.
 
-- **No Proposal Logic in Treasury**:  
-  The treasury contract performs no evaluation of proposals and contains no governance logic, reducing its surface area for spam or attack vectors.
-
-- **Rate-Limited by DAO Governance**:  
-  Proposal throughput is rate-limited at the governance contract layer, protecting the treasury from excessive or malicious execution attempts.
-
-These constraints ensure the treasury acts as a secure, passive vault controlled solely through verified governance channels.
+These measures ensure the Olympia Treasury functions as a secure, auditable, and governance-controlled vault, while maintaining protocol-layer enforcement of fee redirection.
 
 ### Rationale
 
-#### Right-Sized for Network Maturity
+#### Minimalist Architecture for Network Maturity
 
-The Olympia Treasury is deployed as a **simple, immutable vault**, with no internal governance or complex logic. Until the DAO activates, it accumulates funds securely with **no risk of misuse**.
+The Olympia Treasury is deployed as a **simple, immutable vault**, free of internal governance or complex execution logic. Until governance is activated through ECIP-1113, it passively accumulates funds with **no risk of misuse or mismanagement**.
 
-This ensures:
-- **No operational risk** while governance matures  
-- **No funding loss or overhead** from inactive systems  
-- **A secure foundation** for future coordination, without forcing premature adoption
+This architecture ensures:
+- **Zero operational complexity** during early deployment phases  
+- **No risk of unauthorized access or fund leakage**  
+- **A stable foundation** for phased governance activation without imposing time pressure
 
-Treasury logic is intentionally minimal. Complexity, if needed, is pushed to the DAO layer — which can evolve at the community’s pace.
+Treasury functionality is intentionally minimized. All complexity — including proposal logic, vote execution, and disbursement conditions — is deferred to the external DAO layer, which can evolve independently and at the community’s pace.
 
-The Olympia Treasury contract serves as the cornerstone of Ethereum Classic’s transition to a sustainable, self-funded ecosystem. Its design reflects several key priorities:
+#### Strategic Justifications
 
-- **Security Budget**: As block rewards decline under ECIP-1017, Ethereum Classic requires a durable, non-inflationary funding source. Redirecting `BASEFEE` ensures the network retains a native mechanism to support client maintenance, audits, infrastructure, and protocol upgrades.
+The Olympia Treasury contract is foundational to Ethereum Classic’s transition toward sustainable, decentralized funding. Its design supports the following strategic objectives:
 
-- **Incentive Alignment**: By linking developer funding to on-chain activity, the Olympia model creates a positive feedback loop: more dApps and users → more transactions → more treasury funding → better tooling and development → more adoption.
+- **Long-Term Security Budget**  
+  As block rewards decrease under ECIP-1017, Ethereum Classic requires a durable, non-inflationary funding source. Redirecting the `BASEFEE` ensures the network retains native resources to support core development, infrastructure, audits, and upgrades — without relying on external donors.
 
-- **Permissionless Participation**: Unlike past funding efforts that relied on closed foundations or private donors, the Olympia Treasury enables any qualified participant to seek support through a public, merit-based process.
+- **Economic Incentive Alignment**  
+  Linking funding to on-chain activity creates a positive feedback loop:
+  > More dApps and users → More transactions → More treasury revenue → More development → More adoption.
 
-- **Transparency and Accountability**: All inflows, proposals, votes, and disbursements occur entirely on-chain. This eliminates ambiguity, prevents favoritism, and builds community trust in how protocol revenues are allocated.
+- **Permissionless and Merit-Based Access**  
+  In contrast to closed foundations or opaque grant committees, the Olympia Treasury enables any qualified contributor to request funding through transparent, on-chain governance.
 
-- **Governance Modularity**: Decoupling treasury logic from governance logic allows flexibility in upgrading or replacing governance contracts (e.g. Olympia DAO) without altering the Treasury contract itself. This modularity protects against capture, mismanagement, or design flaws in any single governance system.
+- **Full Transparency and Accountability**  
+  All inflows, proposals, votes, and disbursements are recorded on-chain. This eliminates ambiguity, mitigates favoritism, and builds long-term trust in how protocol revenue is managed.
 
-The result is a system that reflects Ethereum Classic’s values — decentralization, transparency, sovereignty — while ensuring it can grow and compete in the modern EVM landscape. Similar treasury redirection mechanisms have been adopted by other EVM-compatible networks. Ronin (a sidechain for Axie Infinity) routes its EIP-1559 basefee to a treasury contract governed by its DAO. Celo redirects gas fees to a Gas Fee Handler that supports carbon offset and community programs. Mantle, an L2 rollup, similarly redirects sequencer revenue to a DAO-governed treasury vault. These precedents validate Ethereum Classic’s approach and demonstrate the viability of basefee redirection for sustainable ecosystem funding.
+- **Governance Modularity and Upgradeability**  
+  By separating treasury logic from governance execution, Ethereum Classic gains flexibility to upgrade or replace the DAO (ECIP-1113) without altering the treasury itself. This decoupling reduces protocol risk and ensures continuity even if governance systems evolve or are replaced.
+
+#### Ecosystem Precedents
+
+The basefee redirection model adopted by Olympia has been validated across several EVM-compatible networks:
+
+- **Ronin Network**  
+  Redirects EIP-1559 `BASEFEE` to a DAO-governed treasury to fund Axie Infinity infrastructure.
+
+- **Celo (L1)**  
+  Directs gas fees to a carbon offset and community treasury via a Gas Fee Handler.
+
+- **Mantle (L2)**  
+  Uses sequencer fee redirection to fund ecosystem grants via MantleDAO.
+
+These examples demonstrate that redirecting basefee revenue into protocol-owned treasuries is a practical and scalable mechanism for sustainable development funding.
+
+#### Summary
+
+The Olympia Treasury embodies Ethereum Classic’s core values — decentralization, transparency, immutability — while introducing a credible, on-chain funding pathway compatible with Proof-of-Work. Its minimalist, modular architecture ensures resilience, upgradeability, and community control over the protocol’s financial future.
 
 ### Related Work
 
-The Olympia Treasury design is inspired by similar EVM-compatible implementations that redirect protocol fees to public goods funding or DAO-governed treasuries:
+The Olympia Treasury design draws inspiration from other EVM-compatible networks that have implemented protocol-level fee redirection to fund public goods and support DAO-managed treasuries. These implementations demonstrate the practical viability of using basefee or gas revenue as a sustainable, decentralized funding mechanism.
 
-- **Ronin Network** (Axie Infinity sidechain): Redirects EIP-1559 `BASEFEE` to [Ronin Treasury Contract](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217).
-- **Celo** (L1): Directs gas fees to a [Gas Fee Handler](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438), which routes funds to carbon offset and community programs.
-- **Mantle** (L2): Implements a modular treasury with [gas fee redirection](https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow) governed by MantleDAO.
-- **Polygon CDK** (modular L2 framework): Supports EIP-1559 and modular DAO-managed treasuries as part of its rollup architecture for sovereign chains. See [Polygon CDK overview](https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos).
-- **OP Stack** (used by Base, Optimism): Implements EIP-1559 and supports custom sequencer fee splitting, although it does not currently redirect `BASEFEE` to a DAO treasury. Serves as a contrast to the full redirection model.
+- **Ronin Network (Axie Infinity sidechain)**  
+  Redirects EIP-1559 `BASEFEE` to a DAO-governed treasury.  
+  [View Contract](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
 
-These examples validate the redirect model as an emerging standard among EVM networks prioritizing sustainable funding and decentralized governance.
+- **Celo (Layer 1)**  
+  Redirects gas fees to a Gas Fee Handler, which allocates funds to carbon offsetting and community initiatives.  
+  [View Handler](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
+
+- **Mantle (Layer 2)**  
+  Implements modular fee redirection from sequencer revenue to a treasury governed by MantleDAO.  
+  [Read More](https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow)
+
+- **Polygon CDK (Modular Rollup Framework)**  
+  Supports EIP-1559 and modular DAO-managed treasuries for sovereign rollups.  
+  [Polygon CDK Overview](https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos)
+
+- **OP Stack (used by Base, Optimism)**  
+  Implements EIP-1559 and supports custom sequencer fee splitting. Unlike other examples, it does **not** currently redirect `BASEFEE` to a DAO treasury — providing a useful contrast to full redirection models.
+
+These examples illustrate a growing consensus among EVM-based networks: basefee redirection is a scalable and effective approach to fund ecosystem growth while maintaining protocol neutrality and decentralization.
 
 ### Implementation
 
-The Olympia Treasury will be implemented in the [Core-Geth](https://github.com/ethereumclassic/core-geth) client as part of the Olympia network upgrade.
+The Olympia Treasury will be implemented in the [Core-Geth](https://github.com/ethereumclassic/core-geth) client as part of the Olympia network upgrade. This integration includes protocol-level changes to redirect `BASEFEE` revenues to a fixed treasury address defined in ECIP-1112.
 
-Client changes include:
+#### Client Responsibilities
 
-- Hardcoding the Treasury contract address in consensus logic as the recipient of the `BASEFEE` in each block.
-- Redirecting the `BASEFEE` from EIP-1559 transactions to this address instead of burning it.
-- Ensuring gas accounting, consensus rules, and transaction validation logic reflect this redirect accurately.
+Client implementations MUST include the following changes:
 
-The Treasury contract’s bytecode and deterministic deployment address will be published in the Olympia upgrade release and audited prior to mainnet deployment.
+- **Consensus Enforcement**:  
+  Hardcode the Olympia Treasury address in the consensus layer as the sole recipient of the `BASEFEE` from each block.
 
-Test cases will be included to validate:
+- **Redirection Logic**:  
+  Replace the default burn behavior of EIP-1559 with a transfer of the `BASEFEE` to the treasury contract.
 
-- Proper `BASEFEE` transfer to the treasury address on each block
-- Balance tracking and event emission from the contract
-- Compatibility with governance contract interfaces (`propose()`, `release()`, `execute()`)
-- Full testnet replay and consensus validation via Mordor deployments
+- **Gas Accounting Integrity**:  
+  Update all gas accounting and transaction validation logic to reflect the redirection, ensuring compatibility with EIP-1559 mechanics.
+
+#### Deployment Artifacts
+
+- The treasury contract’s **bytecode**, **deployment method**, and **deterministic address** will be published with the Olympia upgrade release.
+- Deployment will use `CREATE` or `CREATE2`, allowing reproducibility across clients.
+- The contract will undergo formal security auditing prior to mainnet deployment.
+
+#### Test Coverage and Validation
+
+Comprehensive test cases will be provided to verify correct functionality, including:
+
+- Accurate `BASEFEE` transfer to the treasury address in every block.
+- Emission of expected `Transfer` and governance-related events.
+- Compatibility with governance interfaces (`propose()`, `release()`, `execute()`).
+- Full Mordor Testnet simulation for consensus consistency and replay validation.
+
+These implementation steps ensure the Olympia Treasury is securely embedded into Ethereum Classic’s base protocol, with verifiable behavior across client software and network participants.
 
 ### Modular Treasury Deployment
 
-The Olympia Treasury is a standalone, immutable smart contract that may be deployed and activated before the DAO (ECIP-1113) or legal execution interface (ECIP-1114) are finalized. Once deployed, the treasury can receive BASEFEE funds redirected by ECIP-1111 without requiring immediate disbursement capability.
+The Olympia Treasury is designed as a standalone, immutable smart contract that can be deployed and activated independently of the DAO governance system (ECIP-1113) or legal execution interface (ECIP-1114). Its architecture enables phased deployment and reduces coordination complexity.
 
-This design allows funds to accumulate securely on-chain while governance contracts are tested and deployed. Until the DAO is active, the treasury contract will reject any withdrawal attempts, ensuring security and forward compatibility. This decouples treasury infrastructure from governance infrastructure, supporting a phased rollout of the Olympia Upgrade.
+#### Pre-Governance Activation
+
+- Upon deployment, the Treasury contract can **begin accumulating `BASEFEE` revenue** immediately following activation of ECIP-1111.
+- It does **not require active governance contracts** or execution interfaces to function as a passive vault.
+
+#### Security During Accumulation Phase
+
+- All disbursement functions (`release()`, `execute()`) are **inaccessible** until triggered by the authorized DAO executor.
+- Any withdrawal attempts from EOAs or unauthorized contracts will be **automatically rejected**, ensuring fund immutability during the interim period.
+
+#### Deployment Advantages
+
+- **Forward Compatibility**:  
+  The treasury is ready to integrate with governance modules once finalized, without requiring changes to the contract itself.
+
+- **Security Isolation**:  
+  The decoupled deployment isolates treasury logic from governance logic, minimizing risk exposure during early adoption stages.
+
+- **Phased Rollout Support**:  
+  This modular structure supports a staggered implementation of ECIPs 1111–1114, giving the community time to test, audit, and activate governance systems without delaying treasury accumulation.
+
+This modular approach reflects best practices in protocol design — enabling early utility, minimizing upgrade risk, and maintaining flexibility for future governance integration.
 
 ### Backwards Compatibility
 
-The Olympia Treasury contract introduces a change in the default behavior of EIP-1559 by redirecting the `BASEFEE` to a treasury contract instead of burning it. This alters the consensus logic for fee handling and requires clients to implement the redirect as part of the Olympia upgrade.
+The Olympia Treasury contract modifies the default behavior introduced by EIP-1559 by redirecting the `BASEFEE` to a fixed treasury address instead of burning it. This change is enforced at the protocol level and requires client-side implementation as part of the Olympia upgrade (ECIP-1111).
 
-Legacy nodes that do not upgrade will remain unaware of EIP-1559 (Type-2) transactions and the treasury address, resulting in a permanent consensus fork. All mainnet participants must upgrade their clients to maintain network compatibility.
+#### Impact on Nodes
 
-This change does not impact legacy transaction formats (Type-0) or smart contracts that do not interact with the treasury. It is fully forward-compatible with existing tooling and dApps.
+- **Upgraded Clients**:  
+  Nodes that upgrade will recognize the Treasury contract and process the `BASEFEE` redirect correctly.
+
+- **Legacy Clients**:  
+  Nodes that do not upgrade will remain unaware of:
+  - Type-2 transactions introduced by EIP-1559  
+  - The Treasury contract address hardcoded into consensus  
+  This results in a **permanent consensus fork** from the canonical Ethereum Classic chain.
+
+#### Compatibility with Legacy Contracts
+
+- The redirect does **not affect Type-0 transactions** or existing contracts that do not interact with fee logic.
+- All previously deployed smart contracts will continue to execute normally.
+- The system remains fully **forward-compatible** with existing dApps, tools, and transaction formats that are EIP-1559-agnostic.
+
+This approach preserves historical behavior for legacy participants while introducing modern features in a strictly opt-in, upgrade-controlled manner.
 
 ### Security Considerations
 
-The Olympia Treasury contract must adhere to strict security guarantees to ensure integrity, immutability, and protocol safety. Security measures are grouped by concern below:
+The Olympia Treasury contract is engineered with strict safeguards to uphold immutability, enforce access control, and preserve consensus integrity. Security guarantees are structured across five key domains:
 
 ---
 
 #### 1. Contract Immutability and Access Control
 
-- **No Upgradability or Admin Keys**:  
-  The Treasury contract is deployed as **immutable code** with **no proxy**, **no delegatecall**, and **no admin modifiers**. No entity — including the DAO — can modify the contract after deployment.
+- **Immutable Deployment**:  
+  The contract is deployed with no upgrade path — it uses fixed bytecode, no proxy pattern, no `delegatecall`, and no administrative modifiers.  
+  No party, including the DAO, can alter its logic post-deployment.
 
-- **Access Control**:  
-  Only the authorized **DAO executor contract** can call `release()` or `execute()`.  
-  Any calls from EOAs or unauthorized contracts will **revert automatically**.
+- **Restricted Execution**:  
+  Only the authorized DAO executor contract may invoke `release()` or `execute()` functions.  
+  All calls from EOAs or unauthorized contracts will revert by design.
 
-- **Minimal Attack Surface**:  
-  Treasury logic is **intentionally minimal**. It performs only basic permission checks and transfers approved funds — reducing complexity and risk.
+- **Minimal Surface Area**:  
+  The contract implements only essential permission checks and fund transfers.  
+  Its simplicity minimizes exploitable logic and reduces attack vectors.
 
 ---
 
 #### 2. DAO Integration and Governance Risks
 
-- **Governance Failures**:  
-  Risks such as malicious proposals or collusion lie at the DAO layer. While outside the direct scope of this ECIP, mitigations include:
-  - Proposal review periods  
-  - Multi-sig proposal guards  
-  - Transparent on-chain voting with quorum enforcement
+- **Governance Failures (Out-of-Scope)**:  
+  Risks such as proposal spam, vote manipulation, or collusion reside at the DAO layer (see ECIP-1113).  
+  Expected mitigations include:
+  - Time delays for proposal review  
+  - Multisig proposal guards  
+  - Quorum-based on-chain voting with transparency
 
-- **DAO Capture Resilience**:  
-  Even if the DAO governance layer is compromised, **treasury funds remain locked** unless a valid, quorum-approved proposal is executed through the correct DAO interface.
+- **Treasury Hardening Against DAO Capture**:  
+  Even in the event of DAO compromise, funds remain locked unless a valid, quorum-approved proposal is executed through the DAO’s authorized interface.
 
 ---
 
-#### 3. Client Enforcement and Network Safety
+#### 3. Client Enforcement and Consensus Safety
 
-- **Protocol Enforcement by Clients**:  
-  Clients MUST enforce protocol-level redirection of the `BASEFEE` to the treasury.  
-  Any client failing to implement this will diverge from consensus with the canonical Ethereum Classic chain.
+- **Mandatory Consensus Enforcement**:  
+  Clients MUST enforce protocol-level redirection of `BASEFEE` to the treasury.  
+  Any deviation results in a permanent fork from the canonical Ethereum Classic chain.
 
 - **Replay Protection**:  
-  As with all hard forks, clients must implement **transaction replay protection** to safeguard against cross-fork execution.
+  As with all network upgrades, transaction replay protection is required to prevent cross-fork leakage and execution ambiguity.
 
 ---
 
 #### 4. Replay Safety and Execution Integrity
 
-- **Chain-Specific Execution**:  
-  Treasury disbursement calls MUST include a **chain ID** and **proposal hash** in the payload. This prevents replay attacks across testnets, forks, or non-canonical chains.
+- **Chain-Specific Verification**:  
+  Disbursement payloads MUST include `chain ID` and a proposal-specific hash.  
+  This ensures execution is confined to the intended chain and governance action.
 
-- **Proposal-Linked Execution**:  
-  All disbursements are tied to successful on-chain proposals. Without valid DAO approval, the Treasury contract will reject any attempted execution.
+- **Proposal Binding**:  
+  Treasury disbursements are strictly bound to successful proposals.  
+  Without a valid, DAO-initiated trigger, execution attempts are rejected.
 
 ---
 
 #### 5. Audit and Testing Strategy
 
-- **Independent Audits**:  
-  The Olympia Treasury contract will undergo **dedicated, third-party audits** independent of the DAO governance logic.
+- **Independent Security Audits**:  
+  The Treasury contract will undergo formal audits by third-party security firms, independent of DAO contracts.
 
 - **Formal Verification**:  
-  The contract will be analyzed using formal tools (e.g., Slither, MythX) to verify logic soundness.
+  Static analysis tools (e.g., Slither, MythX) will be used to validate logic soundness and detect vulnerabilities.
 
-- **Testnet Simulation**:  
-  Full contract functionality — including `BASEFEE` redirection and DAO-triggered disbursements — will be tested on the **Mordor Testnet** ahead of mainnet deployment.
+- **Comprehensive Testnet Validation**:  
+  Full functionality — including basefee redirection and governance-triggered disbursement — will be tested on the Mordor Testnet prior to mainnet activation.
 
 ---
 
 #### Summary
 
-The Olympia Treasury is designed to preserve ETC's immutability, enforce strict governance-only disbursement, and minimize smart contract complexity. Its isolation from governance logic, hardened permission model, and full on-chain auditability make it robust against both technical and governance-based attacks. Thorough testnet deployment, auditing, and replay protections will ensure its readiness and resilience for mainnet activation.
+The Olympia Treasury is intentionally minimal, immutable, and governance-isolated. Its hardened access model, enforced consensus logic, and transparent audit trail protect against both technical exploits and governance capture. Through rigorous audits, replay protection, and modular design, the contract provides a robust foundation for sustainable on-chain funding on Ethereum Classic.
 
 ### Copyright
 
